# ChangeLog for dev-db/virtuoso-odbc
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/virtuoso-odbc/ChangeLog,v 1.39 2014/03/07 03:28:28 creffett Exp $

*virtuoso-odbc-6.1.8 (07 Mar 2014)

  07 Mar 2014; Chris Reffett <creffett@gentoo.org> +virtuoso-odbc-6.1.8.ebuild,
  virtuoso-odbc-6.1.6.ebuild:
  Version bump. Update for changes to virtuoso.eclass

  26 Apr 2013; Chris Reffett <creffett@gentoo.org>
  +files/virtuoso-odbc-6.1.6-am_config_header.patch, virtuoso-odbc-6.1.6.ebuild:
  Add patch for automake-1.13 build wrt bug 466954

  20 Sep 2012; Tomáš Chvátal <scarabeus@gentoo.org> -virtuoso-odbc-6.1.4.ebuild,
  virtuoso-odbc-6.1.6.ebuild:
  ppc/ppc64 stable wrt bug#435080. kick older.

  17 Sep 2012; Agostino Sarubbo <ago@gentoo.org> virtuoso-odbc-6.1.6.ebuild:
  Stable for amd64, wrt bug #435080

  17 Sep 2012; Agostino Sarubbo <ago@gentoo.org> virtuoso-odbc-6.1.6.ebuild:
  Stable for x86, wrt bug #435080

*virtuoso-odbc-6.1.6 (05 Aug 2012)

  05 Aug 2012; Chris Reffett <creffett@gentoo.org> +virtuoso-odbc-6.1.6.ebuild,
  -virtuoso-odbc-6.1.5.ebuild:
  Version bump, remove 6.1.5 because it's somewhat broken and unsupported for
  KDE 4.9.

*virtuoso-odbc-6.1.5 (13 Jul 2012)

  13 Jul 2012; Chris Reffett <creffett@gentoo.org> +virtuoso-odbc-6.1.5.ebuild:
  Version bump to 6.1.5

  23 May 2012; Johannes Huber <johu@gentoo.org> -virtuoso-odbc-6.1.3.ebuild:
  Remove old.

  23 May 2012; Jeff Horelick <jdhore@gentoo.org> virtuoso-odbc-6.1.4.ebuild:
  marked x86 per bug 404631

  20 May 2012; Agostino Sarubbo <ago@gentoo.org> virtuoso-odbc-6.1.4.ebuild:
  Stable for amd64, wrt bug #404631

  19 May 2012; Samuli Suominen <ssuominen@gentoo.org>
  virtuoso-odbc-6.1.4.ebuild:
  ppc/ppc64 stable wrt #404631

  18 May 2012; Alexis Ballier <aballier@gentoo.org> virtuoso-odbc-6.1.4.ebuild:
  keyword ~amd64-fbsd

  13 May 2012; <creffett@gentoo.org> metadata.xml:
  Added myself as co-maintainer to metadata.xml
