@@ -1,9 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX virtuoso-odbc-6.1.6-am_config_header.patch 368 SHA256 62fc67633de183e4473b2c9c32f764f35fa9a849e7aed7d581c74cc017d0d67f SHA512 9631d5305ff76ff0bd2235c067aaf226c8e004b6eae70b14ee50a1d4af55bed865f77be126d10a816a14e0daba9aab7286fc801bb5ec8474423813da446e1c83 WHIRLPOOL d90c9edf3f91248a5d0017fa1776f818880640b3116748fca6fbd5192ba0fb13c1a7991022d600151fc0b3485f4632282c6a64ae3d75c9b8c4978f755872f865
 DIST VOS-genpatches-6.1.6.tar.bz2 1224 SHA256 005d960017363d7f0c9807da6f706ec991e48d2c479f92798ee7df9003b7848a SHA512 f99429da6fd4c92252d183b6d1b8caae4910ac93d775c120d67c12925a0eb6ef2ce13a77b27944a2203047965431682a392a2731fc1690cb3f223a65823471c5 WHIRLPOOL 985ad05b55c7ebd1859e1233cb0546247b2ceca0f85b0ffc9212cc8393fbdd4c94af05b521beae08f3c11a838f64bc5b802c5f46dade8568de651929595cdf21
 DIST VOS-genpatches-6.1.8.tar.bz2 1224 SHA256 005d960017363d7f0c9807da6f706ec991e48d2c479f92798ee7df9003b7848a SHA512 f99429da6fd4c92252d183b6d1b8caae4910ac93d775c120d67c12925a0eb6ef2ce13a77b27944a2203047965431682a392a2731fc1690cb3f223a65823471c5 WHIRLPOOL 985ad05b55c7ebd1859e1233cb0546247b2ceca0f85b0ffc9212cc8393fbdd4c94af05b521beae08f3c11a838f64bc5b802c5f46dade8568de651929595cdf21
 DIST virtuoso-opensource-6.1.6.tar.gz 113255048 SHA256 c6bfa6817b3dad5f87577b68f4cf554d1bfbff48178a734084ac3dcbcea5a037 SHA512 d423e872bce8737f60a348c89e24f20de5581e7b943856df534b4c86015e50969cbe46fe0c73eb0f1a29a1a45f2d7cebca98564ab38044f1f731f661635ded55 WHIRLPOOL e44df5c484a92d3197c06fb4a3e338bbabfb49e0b087126799bfe0415cd6335dd61fa664f6b50cb4300d554b1519d70b51a1b27a3837faee2dc9df18459b68b1
 DIST virtuoso-opensource-6.1.8.tar.gz 117756529 SHA256 08d05c6165117de0370e81aa89ddab618e645b5110be301f72e6ffea7044ca50 SHA512 34812406eaa087fa200548c678de748a552a4189f6818df335d80e7680f0376c949cf1d0a2c4caddeafd0d79fac52d21b57b2150297368a7268fc3b83bc0af6b WHIRLPOOL 10bba34ee9a66fa46e3e60defbed7767df23e1bf826d8684c2cf2f7da87c05feb9798fdef85958d3ac81fb66208bed33dbd147d826ccc7b7d3b896133bc332c6
 EBUILD virtuoso-odbc-6.1.6.ebuild 825 SHA256 bebf724a54b5d4c1ea1d29fff6bd302eb327561660b7bb5e7be496f076ec5cd6 SHA512 912902c477c030cf070768bc88229d710784ce374e842d0474d32e008ee24c662d93b461c823f83228833feaf114909b11bb108345f068b2d84d2d6837e4e53b WHIRLPOOL 4d1ac3fcce9a9ac6c82425f89e53e8ac023deaa41ad83b1128cda56ee3e904d48b135fddf60ebc547e2ba43158bb86e57c7ab0b22d2356a8a93b531c4ac33888
-EBUILD virtuoso-odbc-6.1.8.ebuild 767 SHA256 6db990cb4fe599910332df7f47fc8a4b088b60aede905595eb78bb9116ffb8be SHA512 c1be1d2cb174e16b16d0509df64a82087fba86760a3e902b795b9007aa0b9287018febdb0a502372ebbddd2ac115922a4eee4c7f3d0378cb78f63fff8595cefe WHIRLPOOL dc7896f17028e7fd69b69e961e53766511c2f7308c9e8a700b48d08b62c0d70cce577d571c0b711f6c94007b736936027862f45a223cedb33e0ad657ce423703
-MISC ChangeLog 5262 SHA256 f22475de3c367d45c43fb97111a7b1d1e6a46c3baeac2c3b539b2fd6eda0840c SHA512 0330d50584b99e897588c2c7d0c191151a230ad9086871764a10dcd38c0fbd4ce37f1aaa25d1325d06d3bcd052f82f6cfe003ee53416e346898b8daa854b2033 WHIRLPOOL 56e116f8110e1efb0c29547b3d80e5c849183ca7c9627c6c1590c6d750c22317a4bf995f5e3f67775a6874e8256cf3cb79f14f187e85171c66310e08896e0958
+EBUILD virtuoso-odbc-6.1.8.ebuild 761 SHA256 1e5e4c951fb0a9ec1e5dac74c469c34ee719cd2864c47a8ac6112eed5f1b31a1 SHA512 a537b41b7abd32c2e1735b2ebbce134344a15a4a4e5b93da9e149357e609c81bf453dd247f0f9337ebe3d17ff12b8ea4da197cc305016c8bfb7894c9a8a2b6e8 WHIRLPOOL 764a9598068a0662fb57dc89a7220e6c5a803dd84f016510f01ee28f6a0c65cae691b4969d327d97eeed4a348c1b2047e694ded3ac9d3da2bc3ee7c983342e02
+MISC ChangeLog 5367 SHA256 8587e133b428e59a5055186c96207c3333e02e6dfc4454d455f7ffc3327622d5 SHA512 0d00f592c2632a4d932a41c7e9b9651354cd8df67b5ebbd479731ed36f2fa2f75dfaca80f2957f66954f82fac406dffbee194cd4eb0fb45eecd2a40bc29090c0 WHIRLPOOL f4cc321da8a3f5efab240597bc55b7b29ef3247e705421e47bc2d49e2d41bf8ba47176164b231ad5608a23e6df1c794c1fa1e4992ff565d554a7153dcef3fbf4
 MISC metadata.xml 350 SHA256 f0140724f3e7775e1bb5c33e421ff3a249ad1efdda4511585191bada6607f16a SHA512 fbc50e0316bb8c8b894643f3589aaf3d3ebbd400a6ed5ce5c21d9f862d0cb579f0362eaa9a3793644619b34190ef11b54d76e03f43f0128548db8a48c880603f WHIRLPOOL ff24d04b8d5ebce955248505db78f7575fd6e6bf8461a73a18c8d8d7dc4b4868812f01be9a0a74fb0250847359eb3c6bbe5b5dbd344fbe386a0ea008d06c9b8f
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEYEAREIAAYFAlVM2zIACgkQVWmRsqeSphPvsQCdF41L+rKdLS4ltfguZDF+6e2O
+QDsAn0zMG432e4YHFENTZtmbeYxjpSeu
+=PMIQ
+-----END PGP SIGNATURE-----
