@@ -4,11 +4,11 @@ DESCRIPTION=Server binaries for Virtuoso, high-performance object-relational SQL
 EAPI=5
 HOMEPAGE=http://virtuoso.openlinksw.com/wiki/main/Main/
 IUSE=kerberos ldap readline
-KEYWORDS=~amd64 ~arm ~ppc ~ppc64 ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux
+KEYWORDS=~amd64 ~arm ~ppc ppc64 ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux
 LICENSE=GPL-2
 RDEPEND=dev-libs/libxml2:2 >=dev-libs/openssl-0.9.7i:0 >=sys-libs/zlib-1.2.5.1-r2:0[minizip] kerberos? ( app-crypt/mit-krb5 ) ldap? ( net-nds/openldap ) readline? ( sys-libs/readline:0 ) ~dev-db/virtuoso-odbc-6.1.8:0
 RESTRICT=test
 SLOT=0
 SRC_URI=mirror://sourceforge/virtuoso/virtuoso-opensource-6.1.8.tar.gz mirror://gentoo/VOS-genpatches-6.1.8.tar.bz2
 _eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	virtuoso	5f957732573e5110ce1a032fef9fdeea
-_md5_=5d7bf9db9b19df9201a8319a08e5ea57
+_md5_=f3c2898a69ebf3ddee0576fe7b7e9840
