@@ -4,11 +4,11 @@ DESCRIPTION=Hyphenates various words according to the rules of the language the 
 EAPI=5
 HOMEPAGE=http://rubyforge.org/projects/text-format
 IUSE=elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 doc test test
-KEYWORDS=~alpha amd64 hppa ~ia64 ppc ~ppc64 ~sparc x86 ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~x64-solaris ~x86-solaris
+KEYWORDS=~alpha amd64 hppa ~ia64 ppc ppc64 ~sparc x86 ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~x64-solaris ~x86-solaris
 LICENSE=MIT
 RDEPEND=ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] )
 REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 )
 SLOT=0
 SRC_URI=mirror://rubygems/text-hyphen-1.4.1.gem
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-utils-2	4241a8d9ed765c83041b38ac128505cd	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ruby-fakegem	d4f8591e9b20b106327e9d143eb13da5	ruby-ng	c79a9fd7644eefe8009be02a82648e1f	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=2d198acfe471f2bc5354970c55e160c2
+_md5_=ee8e4d5b2ea680310eed95cd0d606f03
