@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/text-hyphen
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/text-hyphen/ChangeLog,v 1.68 2015/04/26 16:58:52 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/text-hyphen/ChangeLog,v 1.69 2015/05/08 15:58:19 jer Exp $
+
+  08 May 2015; Jeroen Roovers <jer@gentoo.org> text-hyphen-1.4.1-r1.ebuild:
+  Stable for PPC64 (bug #546968).
 
   26 Apr 2015; Pacho Ramos <pacho@gentoo.org> text-hyphen-1.4.1-r1.ebuild:
   ppc stable wrt bug #546968
